--- a/VacationPy-Copy1.ipynb
+++ b/VacationPy-Copy1.ipynb
@@ -13,9 +13,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'api_keys'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-2-b5e71b818578>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mjson\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[1;31m# Import API key\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 10\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mapi_keys\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mg_key\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     11\u001b[0m \u001b[0mgmaps\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mconfigure\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mapi_key\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mg_key\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'api_keys'"
+     ]
+    }
+   ],
    "source": [
     "# Dependencies and Setup\n",
     "import matplotlib.pyplot as plt\n",
@@ -40,127 +52,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>City</th>\n",
-       "      <th>Cloudiness</th>\n",
-       "      <th>Country</th>\n",
-       "      <th>Date</th>\n",
-       "      <th>Humidity</th>\n",
-       "      <th>Lat</th>\n",
-       "      <th>Lon</th>\n",
-       "      <th>Max Temp</th>\n",
-       "      <th>Wind Speed</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>tubuala</td>\n",
-       "      <td>40</td>\n",
-       "      <td>PA</td>\n",
-       "      <td>1569373398</td>\n",
-       "      <td>94</td>\n",
-       "      <td>9.52</td>\n",
-       "      <td>-79.03</td>\n",
-       "      <td>81.00</td>\n",
-       "      <td>2.24</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>nikolskoye</td>\n",
-       "      <td>0</td>\n",
-       "      <td>RU</td>\n",
-       "      <td>1569373398</td>\n",
-       "      <td>94</td>\n",
-       "      <td>59.70</td>\n",
-       "      <td>30.79</td>\n",
-       "      <td>41.00</td>\n",
-       "      <td>2.24</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>nacala</td>\n",
-       "      <td>0</td>\n",
-       "      <td>MZ</td>\n",
-       "      <td>1569373398</td>\n",
-       "      <td>96</td>\n",
-       "      <td>-14.56</td>\n",
-       "      <td>40.69</td>\n",
-       "      <td>68.17</td>\n",
-       "      <td>6.38</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>remanso</td>\n",
-       "      <td>85</td>\n",
-       "      <td>BR</td>\n",
-       "      <td>1569373398</td>\n",
-       "      <td>43</td>\n",
-       "      <td>-9.62</td>\n",
-       "      <td>-42.08</td>\n",
-       "      <td>79.32</td>\n",
-       "      <td>11.79</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>maceio</td>\n",
-       "      <td>20</td>\n",
-       "      <td>BR</td>\n",
-       "      <td>1569373222</td>\n",
-       "      <td>83</td>\n",
-       "      <td>-9.67</td>\n",
-       "      <td>-35.74</td>\n",
-       "      <td>75.20</td>\n",
-       "      <td>5.82</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         City  Cloudiness Country        Date  Humidity    Lat    Lon  \\\n",
-       "0     tubuala          40      PA  1569373398        94   9.52 -79.03   \n",
-       "1  nikolskoye           0      RU  1569373398        94  59.70  30.79   \n",
-       "2      nacala           0      MZ  1569373398        96 -14.56  40.69   \n",
-       "3     remanso          85      BR  1569373398        43  -9.62 -42.08   \n",
-       "4      maceio          20      BR  1569373222        83  -9.67 -35.74   \n",
-       "\n",
-       "   Max Temp  Wind Speed  \n",
-       "0     81.00        2.24  \n",
-       "1     41.00        2.24  \n",
-       "2     68.17        6.38  \n",
-       "3     79.32       11.79  \n",
-       "4     75.20        5.82  "
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "file = pd.read_csv(\"weather_output.csv\")\n",
     "file.dropna()\n",
@@ -12770,7 +12664,7 @@
     "   name_address = requests.get(base_url, params=params)\n",
     "   \n",
     "   name_address = name_address.json()\n",
-    "   print(json.dumps(name_address, indent=4, sort_keys=True))\n",
+    "#    print(json.dumps(name_address, indent=4, sort_keys=True))\n",
     "  \n",
     "   try:\n",
     "       hotel_df.loc[index, \"Hotel Name\"] = name_address[\"results\"][0][\"name\"]\n",
